# python-vectortools

./: README.md  pyproject.toml
src/vectortools/: __init__.py  main.py  utils.py
